# registry-testkit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml  sonar-project.properties
.github/workflows/: autofix.yml  ci.yml  sonarqube.yml
ci/: Cargo.toml
ci/tests/: autofix.rs  ci.rs  sonarqube.rs
src/: config.rs  error.rs  lib.rs  server.rs  storage.rs
tests/: integration_test.rs
