[package]
name = "registry-testkit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A minimal, OCI-compliant container registry for testing and development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/registry-testkit"
keywords = ["docker", "registry", "oci", "container", "testing"]
categories = ["development-tools::testing", "web-programming::http-server"]
readme = "README.md"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.18.1", features = ["v4"] }
tempfile = "3"
thiserror = "2.0.17"
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
bollard = "0.18"
tokio-test = "0.4"
futures-util = "0.3"
serde_json = "1.0"
