[package]
name = "registry-testkit"
version = "0.1.2"
edition = "2021"
authors = ["Sandipsinh Rathod <sandip@ssdd.dev>"]
description = "A minimal, OCI-compliant container registry for testing and development"
repository = "https://github.com/gpmcp/registry-testkit"
keywords = ["docker", "registry", "oci", "container", "testing"]
categories = ["development-tools::testing", "web-programming::http-server"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.18.1", features = ["v4"] }
tempfile = "3"
thiserror = "2.0.17"
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
bollard = "0.19.4"
futures-util = "0.3"
serde_json = "1.0"
gh-workflow-tailcall = "0.3.0"
